<resources>
    <string name="app_name">Mtihany</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">HOME</string>
    <string name="title_activity_base">MTIHANY</string>
    <string name="mtihany_root_directory">Mtihany</string>
    <string name="next">NEXT</string>
    <string name="Download">Download</string>

    <string-array name="resourceDirectory">
        <item>/audio</item>
        <item>/video</item>
        <item>/documents</item>
        <item>/images</item>
    </string-array>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="app_descrip"> Mtihany provides you with the means to access various examination material, Course Work, Projects, Cats and Exams with ease.
No need to struggle with hard physical copies and misplaced papers anymore.
Mtihany will help you access this various materials stated above with a click of a button.
     </string>
    <string name="key_features">Key Features Include</string>
    <string name="file_management">1. File management, deletion and insertion </string>
    <string name="download_files">2. Downloading files.</string>
    <string name="pdf_viewing"> 3.	Pdf viewing</string>
    <string name="word_viewing">4.	Word document viewing. </string>
    <string name="sharing">5.	Sharing. </string>


    <string name="app_credits">Wamatu</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
