<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dip">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|top"
                android:paddingBottom="10dp"
                android:text="MTIHANY"
                android:textColor="@color/theme_dark_primary"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="15dp"
                android:paddingBottom="10dp"
                android:text="@string/app_descrip"
                android:textAlignment="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"

                android:text="@string/key_features"
                android:textAlignment="viewStart" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:text="@string/file_management"
                android:textAlignment="viewStart" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:text="@string/download_files"
                android:textAlignment="viewStart" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:text="@string/pdf_viewing"
                android:textAlignment="viewStart" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:text="@string/word_viewing"
                android:textAlignment="viewStart" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sharing"
                android:textAlignment="viewStart" />

            <TextView
                android:id="@+id/about_credits"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:gravity="bottom|center"
                android:paddingBottom="5dp"
                android:paddingTop="20dip"
                android:text="@string/app_credits"
                android:textColor="@color/theme_dark_primary"
                android:textSize="16sp" />

        </LinearLayout>
    </ScrollView>


</LinearLayout>